# ac_switch_rust

./: .cargo-rdme.toml  .gitignore  Cargo.toml  README.md  plan.md
doc/: README.md  cli.md
examples/: generate_cli_docs.rs
scripts/: generate-docs.ps1
src/: app.rs  cli.rs  error.rs  lib.rs  loginusers_vdf.rs  main.rs  process_control.rs  steam.rs  windows_registry.rs
tests/: doc_sync.rs
tests/fixtures/: multi_user.vdf  offline_user.vdf  single_user.vdf
