[package]
name = "ac_switch_rust"
version = "0.1.0"
edition = "2021"
readme = "doc/README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
clap-markdown = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
winreg = "0.52"
